src/styles/scss/main.scss
/* ... */
.footer-widget-wrapper {
  padding: 90px 0 120px;
}

.footer-widget-wrapper .single-footer-widget {
  margin-top: 30px;
}
.footer-widget-wrapper .single-footer-widget .widget-head {
  margin-bottom: 30px;
}
.footer-widget-wrapper .single-footer-widget .widget-head h3 {
  font-size: 24px;
  font-weight: 700;
  color: $white;
}
.footer-widget-wrapper .single-footer-widget .footer-content p {
  color: $white;
}
.footer-widget-wrapper .single-footer-widget .footer-content .social-icon {
  display: flex;
  gap: 30px;
  align-items: center;
  margin-top: 30px;
}
.footer-widget-wrapper .single-footer-widget .footer-content .social-icon a {
  color: $white;
  font-size: 27px;
}
.footer-widget-wrapper
  .single-footer-widget
  .footer-content
  .social-icon
  a:hover {
  color: $theme-color-2;
}
.footer-widget-wrapper .single-footer-widget .footer-content .footer-input-4 {
  position: relative;
}
.footer-widget-wrapper
  .single-footer-widget
  .footer-content
  .footer-input-4
  input {
  border: none;
  width: 100%;
  background-color: $white;
  border-radius: 28px;
  padding: 14px 20px;
  color: $text;
}
.footer-widget-wrapper
  .single-footer-widget
  .footer-content
  .footer-input-4
  .submit-btn {
  width: 40px;
  height: 40px;
  line-height: 40px;
  text-align: center;
  border-radius: 50%;
  background-color: $theme-color;
  color: $white;
  position: absolute;
  top: 0;
  right: 0;
  line-height: 1;
  top: 8px;
  right: 10px;
}
.footer-widget-wrapper .single-footer-widget .list-area li {
  font-weight: 400;
  font-size: 16px;
}
.footer-widget-wrapper .single-footer-widget .list-area li:not(:last-child) {
  margin-bottom: 15px;
}
.footer-widget-wrapper .single-footer-widget .list-area li a {
  color: $white;
  position: relative;
  padding-left: 20px;
}
.footer-widget-wrapper .single-footer-widget .list-area li a::before {
  position: absolute;
  top: 8px;
  left: 0;
  width: 6px;
  height: 6px;
  content: "";
  border-radius: 50%;
  background-color: $white;
  transition: all 0.4s ease-in-out;
}
.footer-widget-wrapper .single-footer-widget .list-area li a:hover {
  color: $theme-color-2;
}
.footer-widget-wrapper .single-footer-widget .list-area li a:hover::before {
  background-color: $theme-color-2;
}
.footer-widget-wrapper .single-footer-widget .footer-contect li {
  display: flex;
  gap: 15px;
  align-items: center;
}
.footer-widget-wrapper .single-footer-widget .footer-contect li i {
  font-size: 26px;
  color: $theme-color-2;
}
.footer-widget-wrapper .single-footer-widget .footer-contect li .content h5 {
  color: $white;
}
.footer-widget-wrapper .single-footer-widget .footer-contect li .content p a {
  color: $white;
}
.footer-widget-wrapper
  .single-footer-widget
  .footer-contect
  li:not(:last-child) {
  margin-bottom: 15px;
}
.footer-widget-wrapper .single-footer-widget form {
  margin-top: 30px;
}
.footer-widget-wrapper .single-footer-widget .form-clt input {
  width: 100%;
  border: none;
  outline: none;
  border-radius: 6px;
  background: #fff;
  padding: 19px 30px;
  line-height: 1;
  color: $text;
}
.footer-widget-wrapper .single-footer-widget .theme-btn {
  margin-top: 20px;
  padding: 21px 22px;
}
.footer-widget-wrapper .single-footer-widget .theme-btn i {
  position: absolute;
  top: 5px;
  right: 5px;
  background-color: $white;
  bottom: 0;
  color: $theme-color;
}
.footer-widget-wrapper .single-footer-widget .google-map iframe {
  width: 100%;
  height: 216px;
  border-radius: 34px;
}

.footer-newsletter-wrapper-2 {
  padding: 100px 0 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer-newsletter-wrapper-2.style-margin {
  margin-top: 102px;
}

.footer-newsletter-wrapper-2 .footer-newsletter-right {
  border-radius: 10px;
  background: #44455e;
  max-width: 915px;
  padding: 30px 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.footer-newsletter-wrapper-2 .footer-newsletter-right .icon-items {
  display: flex;
  align-items: center;
  gap: 20px;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right .icon {
  max-width: 71px;
  width: 100%;
  height: 71px;
  line-height: 71px;
  text-align: center;
  border-radius: 50%;
  color: $white;
  font-size: 30px;
  background-color: $theme-color;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right .content h4 {
  font-size: 20px;
  color: $white;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right .content span {
  color: $white;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right form {
  max-width: 387px;
  width: 100%;
  position: relative;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right form .icon-btn {
  width: 35px;
  height: 35px;
  line-height: 35px;
  display: inline-block;
  background-color: $theme-color-2;
  color: $white;
  border-radius: 50%;
  position: absolute;
  top: 12px;
  right: 12px;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right form input {
  width: 100%;
  outline: none;
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.35);
  font-size: 15px;
  padding: 20px 20px;
  line-height: 1;
  background: transparent;
}
.footer-newsletter-wrapper-2 .footer-newsletter-right form input::placeholder {
  color: rgba(255, 255, 255, 0.67);
}

.footer-bottom {
  position: relative;
  background: #44455e;
  z-index: 9;
  padding: 18px 0;
}
.footer-bottom.bg-4 {
  background: #1d2250;
}
.footer-bottom .footer-wrapper {
  position: relative;
  z-index: 9;
}

.footer-bottom .footer-wrapper p {
  color: $white;
}
.footer-bottom .footer-wrapper .footer-menu {
  display: flex;
  align-items: center;
  gap: 20px;
}
.footer-bottom .footer-wrapper .footer-menu li a {
  color: $white;
  background-image: linear-gradient($theme-color-2, $theme-color-2);
  background-position: 0 95%;
  background-repeat: no-repeat;
  background-size: 0% 2px;
  display: inline-block;
  transition: all 0.4s ease-in-out;
  text-transform: capitalize;
}
/* ... */

